# PipelineSession

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  old_PipelineSession.cpp  old_PipelineSession.h
docs/: ARCHITECTURE.md  neat_tensor_contract.md
examples/: MultiCameraUDPYOLOv8.cpp  decode_rtsp.cpp  example_utils.cpp  example_utils.h  midas_v21_rtsp.cpp  modelmpk_resnet50.cpp  modelsession_resnet50.cpp  pipelinesession_resnet50.cpp  resnet50_debug_overloads.cpp  yolov8_multi_rtsp_demo.cpp
include/: ModelSession.hpp
include/builder/: Builder.h  ConfigJsonConsumer.h  ConfigJsonOverride.h  ConfigJsonProvider.h  Graph.h  GraphPrinter.h  NeatNegotiation.h  NeatSpecProvider.h  NextCpuConfigurable.h  Node.h  NodeGroup.h  OutputSpec.h
include/contracts/: Contract.h  ContractRegistry.h  ContractTypes.h  ValidationReport.h  Validators.h
include/gst/: GstBusWatch.h  GstHelpers.h  GstInit.h
include/mpk/: ModelMPK.h  ModelMPKOpenCV.h
include/nodes/common/: AppSink.h  Caps.h  DebugPoint.h  FileSrc.h  ImageDecode.h  ImageFreeze.h  JpegDec.h  QtDemuxVideoPad.h  Queue.h  VideoConvert.h  VideoRate.h  VideoScale.h
include/nodes/groups/: GroupOutputSpec.h  ImageInputGroup.h  ModelGroups.h  RtspInputGroup.h  UdpSinkOutputGroup.h  VideoInputGroup.h
include/nodes/io/: AppSrcImage.h  InputAppSrc.h  RTSPInput.h  UdpSink.h
include/nodes/rtp/: H264CapsFixup.h  RtpH264Depay.h
include/nodes/sima/: H264DecodeSima.h  H264EncodeSima.h  H264Parse.h  Preproc.h  RtpH264Pay.h  SimaArgMax.h  SimaBoxDecode.h  SimaRender.h
include/pipeline/: AsyncStream.h  DebugTypes.h  DetectionTypes.h  Errors.h  FrameStream.h  InputStream.h  NeatTensor.h  NeatTensorAdapters.h  NeatTensorConversion.h  NeatTensorCore.h  NeatTensorOpenCV.h  NeatTensorSpec.h  PipelineOptions.h  PipelineReport.h  PipelineRun.h  PipelineSession.h  StageRun.h  TapStream.h  TensorStream.h  TensorTypes.h  TessellatedTensor.h
include/pipeline/debug/: DebugOverloads.h
include/pipeline/internal/: CapsBridge.h  Diagnostics.h  DispatcherRecovery.h  GstDiagnosticsUtil.h  NeatTensorTransfer.h  SampleUtil.h  SimaaiGuard.h  SimaaiMemory.h  StageConfig.h  TensorUtil.h
include/sima/: debug.h
include/sima/builder/: Builder.h  ConfigJsonConsumer.h  ConfigJsonOverride.h  ConfigJsonProvider.h  Graph.h  GraphPrinter.h  NeatNegotiation.h  NeatSpecProvider.h  NextCpuConfigurable.h  Node.h  NodeGroup.h  OutputSpec.h
include/sima/contracts/: Contract.h  ContractRegistry.h  ContractTypes.h  ValidationReport.h  Validators.h
include/sima/gst/: GstBusWatch.h  GstHelpers.h  GstInit.h  GstIntrospection.h  GstPadTap.h  GstParseLaunch.h
include/sima/mpk/: ModelMPK.h  MpKLoader.h  MpKManifest.h  MpKPipelineAdapter.h
include/sima/pipeline/: AsyncStream.h  DebugTypes.h  DetectionTypes.h  Errors.h  FrameStream.h  InputStream.h  NeatTensor.h  NeatTensorAdapters.h  NeatTensorConversion.h  NeatTensorCore.h  NeatTensorOpenCV.h  NeatTensorSpec.h  PipelineOptions.h  PipelineReport.h  PipelineRun.h  PipelineSession.h  StageRun.h  TapStream.h  TensorStream.h  TensorTypes.h  TessellatedTensor.h
include/sima/policy/: DecoderPolicy.h  DefaultPolicy.h  EncoderPolicy.h  MemoryPolicy.h  Policy.h  RtspPolicy.h
include/simaai/: ModelSession.hpp
scripts/: install_neat_plugins.sh  sync_neatdecoder.sh  use_neatdecoder.sh
src/: ModelSession.cpp
src/builder/: NeatNegotiation.cpp  OutputSpec.cpp
src/gst/: GstBusWatch.cpp  GstHelpers.cpp  GstInit.cpp
src/mpk/: ModelMPK.cpp
src/nodes/common/: AppSink.cpp  Caps.cpp  DebugPoint.cpp  FileSrc.cpp  ImageDecode.cpp  ImageFreeze.cpp  JpegDec.cpp  QtDemuxVideoPad.cpp  Queue.cpp  VideoConvert.cpp  VideoRate.cpp  VideoScale.cpp
src/nodes/groups/: GroupOutputSpec.cpp  ImageInputGroup.cpp  ModelGroups.cpp  RtspInputGroup.cpp  UdpSinkOutputGroup.cpp  VideoInputGroup.cpp
src/nodes/io/: AppSrcImage.cpp  InputAppSrc.cpp  RTSPInput.cpp  UdpSink.cpp
src/nodes/rtp/: H264CapsFixup.cpp  RtpH264Depay.cpp
src/nodes/sima/: H264DecodeSima.cpp  H264EncodeSima.cpp  H264Parse.cpp  Preproc.cpp  RtpH264Pay.cpp  SimaArgMax.cpp  SimaBoxDecode.cpp  SimaRender.cpp
src/pipeline/: AsyncStream.cpp  DebugOverloads.cpp  DetectionTypes.cpp  Errors.cpp  FrameStream.cpp  NeatTensorAdapters.cpp  NeatTensorConversion.cpp  NeatTensorCore.cpp  NeatTensorImage.cpp  NeatTensorOpenCV.cpp  PipelineReport.cpp  PipelineRun.cpp  PipelineSession.cpp  StageConfig.cpp  StageRun.cpp  TapStream.cpp  TensorStream.cpp  TensorTypes.cpp  TensorUtil.cpp  TessellatedTensor.cpp
src/pipeline/internal/: CapsBridge.cpp  DispatcherRecovery.cpp  GstDiagnosticsUtil.cpp  InputStream.cpp  InputStream.h  InputStreamUtil.cpp  InputStreamUtil.h  NeatTensorTransfer.cpp  SampleUtil.cpp  SimaaiGuard.cpp
tests/: async_stream_test.cpp  encoding_decoding_test.cpp  file_read_test.cpp  incremental_yolov8_test.cpp  modelsession_resnet50_guard_test.cpp  neat_tensor_device_placement_test.cpp  output_appsink_policy_test.cpp  preproc_standalone_test.cpp  resnet50_modelpack_test.cpp  run_debug_test.cpp  test_utils.h  unit_builder_test.cpp  unit_debug_overloads_test.cpp  unit_framestream_test.cpp  unit_groups_test.cpp  unit_gst_helpers_test.cpp  unit_image_group_runtime_test.cpp  unit_outputspec_test.cpp  unit_sima_plugins_test.cpp  unit_tapstream_test.cpp  unit_tensorstream_test.cpp  yolov8s_boxdecode_bench.cpp  yolov8s_boxdecode_test.cpp
tests/e2e_pipelines/: e2e_utils.cpp  e2e_utils.h
tests/e2e_pipelines/img_classification/: modelsession_resnet50_guard_test.cpp  resnet50_modelpack_test.cpp  rtsp_pull_frame_test.cpp
tests/e2e_testing/: async_stream_test.cpp  debug_point_test.cpp  encoding_decoding_test.cpp  file_read_test.cpp  output_appsink_policy_test.cpp  preproc_standalone_test.cpp
tests/unit_testing/: unit_appsrcimage_test.cpp  unit_contracts_test.cpp  unit_debug_overloads_test.cpp  unit_dispatcher_recovery_test.cpp  unit_framestream_test.cpp  unit_groups_test.cpp  unit_image_group_runtime_test.cpp  unit_neattensor_core_test.cpp  unit_neattensor_cvmat_test.cpp  unit_nodes_test.cpp  unit_pipeline_io_test.cpp  unit_sima_plugins_test.cpp  unit_tensorstream_test.cpp
(+37 files in other folders)
